--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-slideshow-image": "^3.7.0",
     "react-string-replace": "^1.1.0",
     "react-toastify": "^9.0.4",
+    "react-tooltip": "^4.2.21",
     "sass": "^1.52.1",
     "socket.io-client": "^2.4.0",
     "web-vitals": "^2.1.2"
