--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-best-gradient-color-picker": "^2.0.5",
     "react-bootstrap": "^2.1.2",
     "react-bootstrap-range-slider": "^3.0.4",
+    "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
     "react-paginate": "^8.1.3",
