--- a/package.json
+++ b/package.json
@@ -7,26 +7,20 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
-    "mobx": "^6.5.0",
-    "mobx-react-lite": "^3.3.0",
     "react": "^17.0.2",
     "react-best-gradient-color-picker": "^2.0.5",
-    "react-bootstrap": "^2.1.2",
-    "react-bootstrap-range-slider": "^3.0.4",
     "react-color": "^2.19.3",
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
     "react-paginate": "^8.1.3",
     "react-router-dom": "^6.1.1",
     "react-scripts": "5.0.0",
-    "react-select": "^5.3.2",
     "react-slideshow-image": "^3.7.0",
     "react-string-replace": "^1.1.0",
     "react-toastify": "^9.0.4",
     "react-tooltip": "^4.2.21",
     "sass": "^1.52.1",
-    "socket.io-client": "^2.4.0",
-    "web-vitals": "^2.1.2"
+    "socket.io-client": "^2.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
