--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://ovgamesdev.github.io/",
+  "homepage": "https://betterwasya.vercel.app/",
   "short_name": "OvGames",
   "name": "Developer",
   "icons": [
